# godot-cef

./: CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  deploy-docs.yml  test.yml
addons/godot_cef/: cef.gdextension  godot_cef.gdextension
benches/: Cargo.toml
benches/benches/: software_rendering.rs
cef_app/: Cargo.toml
cef_app/src/: ime_helper.js  lib.rs  loader.rs
crates/cef_app/: Cargo.toml
crates/cef_app/src/: app.rs  browser_process.rs  ipc_contract.rs  lib.rs  loader.rs  render_handler.rs  render_process.rs  types.rs  v8_handlers.rs
crates/gdcef/: Cargo.toml
crates/gdcef/src/: browser.rs  cef_init.rs  cef_ipc_inspector.rs  compat.rs  cookie.rs  godot_protocol.rs  ipc_data.rs  lib.rs  settings.rs  utils.rs  webrender.rs  webrender_ipc.rs
crates/gdcef/src/accelerated_osr/: macos.rs  mod.rs  vulkan_common.rs
crates/gdcef/src/accelerated_osr/linux/: vulkan.rs
crates/gdcef/src/accelerated_osr/windows/: d3d12.rs  mod.rs  vulkan.rs
crates/gdcef/src/cef_texture/: backend.rs  browser_lifecycle.rs  cookie_ops.rs  ime.rs  mod.rs  permission_ops.rs  rendering.rs  signals.rs
crates/gdcef/src/cef_texture2d/: api.rs  lifecycle.rs  mod.rs  rendering.rs  runtime.rs
crates/gdcef/src/godot_protocol/: handler.rs  mod.rs  multipart.rs  range.rs
crates/gdcef/src/input/: mod.rs
crates/gdcef/src/vulkan_hook/: common.rs  linux.rs  mod.rs  windows.rs
crates/gdcef_helper/: Cargo.toml  build.rs
crates/gdcef_helper/src/: main.rs  utils.rs
crates/software_render/: Cargo.toml
docs/: index.md
docs/.vitepress/: config.mts
docs/api/: downloads.md  gpu-device-pinning.md  ime-support.md  index.md  ipc-inspector.md  methods.md  properties.md  security-baseline.md  signals.md  vulkan-support.md
docs/zh_CN/: index.md
docs/zh_CN/api/: audio-capture.md  downloads.md  drag-and-drop.md  gpu-device-pinning.md  ime-support.md  index.md  ipc-inspector.md  methods.md  properties.md  security-baseline.md  signals.md  vulkan-support.md
gdcef/: Cargo.toml
gdcef/src/: accelerated_osr.rs  browser.rs  cef_init.rs  error.rs  input.rs  lib.rs  render.rs  res_protocol.rs  texture.rs  utils.rs  webrender.rs
gdcef/src/accelerated_osr/: linux.rs  macos.rs  mod.rs  windows.rs
gdcef/src/accelerated_osr/linux/: mod.rs  vulkan.rs
gdcef/src/accelerated_osr/windows/: d3d12.rs  mod.rs  vulkan.rs
gdcef/src/cef_texture/: browser_lifecycle.rs  ime.rs  mod.rs  rendering.rs  signals.rs
gdcef/src/input/: keycode.rs
gdcef/src/mac/: bundle_framework.rs
gdcef/src/vulkan_hook/: linux.rs  mod.rs  windows.rs
gdcef_helper/: Cargo.toml
gdcef_helper/src/: dxgi_hook.rs  main.rs  utils.rs  vulkan_select.rs
gdcef_helper/src/mac/: bundle_app.rs
xtask/: Cargo.toml
xtask/src/: bundle_app.rs  bundle_common.rs  bundle_framework.rs  bundle_linux.rs  bundle_windows.rs  main.rs  pack.rs  validate.rs
