[workspace]
resolver = "3"
members = ["cef_app", "gdcef", "gdcef_helper"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
godot = { version = "0.4.5", features = ["api-4-5", "experimental-threads"] }
cef = { version = "=143.4.0+143.0.13", features = ["sandbox", "accelerated_osr"] }
cef-dll-sys = { version = "=143.4.0+143.0.13", features = ["sandbox"] }
process_path = "0.1.4"
winit = "0.30.12"
plist = { version = "1" }
serde = { version = "1", features = ["derive"] }
libloading = { version = "0.9.0" }
wide = "1.0"
metal = "0.33"
objc = "0.2"
ash = { version = "0.38", default-features = false, features = ["std", "debug", "loaded"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
