[package]
name = "gdcef"
edition = "2024"

[lib]
name = "gdcef"
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[[bin]]
name = "bundle_framework"
path = "src/mac/bundle_framework.rs"

[dependencies]
godot = { workspace = true }
cef = { workspace = true }
cef-dll-sys = { workspace = true }
wgpu = { workspace = true }
process_path = { workspace = true }
winit = { workspace = true }
cef_app = { path = "../cef_app" }

[target.'cfg(target_os = "macos")'.dependencies]
plist = { workspace = true }
serde = { workspace = true }
libloading = { workspace = true }
