[package]
name = "gdcef_helper"
edition = "2024"

[[bin]]
name = "gdcef_helper"

[[bin]]
name = "bundle_app"
path = "src/mac/bundle_app.rs"

[dependencies]
cef = { workspace = true }
cef-dll-sys = { workspace = true }
process_path = { workspace = true }
cef_app = { path = "../cef_app" }

[target.'cfg(target_os = "macos")'.dependencies]
libloading = { workspace = true }
plist = { workspace = true }
serde = { workspace = true }
